--- a/function.html
+++ b/function.html
@@ -13,12 +13,13 @@
   jieun = '천재';
   console.log(jieun);
 
-  function valueChange(){
-    return "똑똑"; // 함수를 생성한다 . 호출 전
+  function valueChange(a,b,c){
+    return a+b+c +"바보!"; // 함수를 생성한다 . 호출 전
   }
   
-  jieun = valueChange(); // 똑똑(리턴값) 호출
-  console.log(jieun);
+  jieun = valueChange("홀쭉","님","안녕하세요!"); // 똑똑(리턴값) 호출
+  console.log(jieun); //() 소괄호는 모두 함수이다.
+//객체에서 쓰는 속성 변수 = key , 함수릐 소괄호 사이에 들어가는 변수 매개변수
   </script>
 </body>
 </html>
