월급계산기_주휴x

--- a/percent.html
+++ b/percent.html
@@ -43,6 +43,18 @@ function solution(arr) {
 
 document.write(solution(arr)); 
 
+</script>
+<br>
+<h1>< 월급 계산기 ></h1>
+<p> 주휴수당x</p>
+<script>
+
+function setMoney(dayTime,workDay,minMoney){
+  return re = (dayTime*workDay*minMoney);
+}
+document.write(setMoney(5.5,8,9620)).style.color='blue';
+
+
 
 </script>
 
